header jump fix

--- a/style/main.css
+++ b/style/main.css
@@ -115,7 +115,7 @@
     overflow: hidden;
     /*position: fixed;*/
     width: 100%;
-    padding-top: 0.5em;
+    /*padding-top: 0.5em;*/
   }
   
   .navbar_element{
